fix resource loader